# eLearningCourses

./: README.md  ai-beginner-guide.html  ai-beginner-quiz.html  index.html  pyproject.toml
learningMaterials/: 01-getting-started-and-python-basics.html  02-operators-data-types-strings.html  03-user-input-branching-loops.html  04-collections.html  05-functions-recursion-scope.html  06-modules-files-oop-projects.html  index.html
learningMaterials/chapterMaterials/: 00-intro-course-orientation.html  01-chapter-1-getting-started.html  02-chapter-2-python-basics.html  index.html
scripts/: import-python-course-transcript.mjs
src/learning_python/: __init__.py  __main__.py
tests/: test_core.py
transcripts/: 00-intro.md  01-chapter-1-getting-started.md  02-chapter-2-python-basics.md  03-chapter-3-operators.md  04-chapter-4-data-types.md  05-chapter-5-user-input.md  06-chapter-6-lists-tuples.md  07-chapter-7-dictionaries-sets.md  08-chapter-8-loops.md  09-chapter-9-functions.md  10-chapter-10-recursion.md  11-chapter-11-scope.md  12-chapter-12-closures.md  13-chapter-13-f-strings.md  14-chapter-14-modules.md  15-chapter-15-command-line-arguments.md  16-chapter-16-challenges.md  17-chapter-17-lambda-higher-order-functions.md  18-chapter-18-classes-objects.md  19-chapter-19-exceptions-errors.md  20-chapter-20-oop-project.md  21-chapter-21-virtual-environments-pip.md  22-chapter-22-file-operations.md  23-chapter-23-final-project.md
